--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ body {
 body {
   background-color: #607d8b;
   margin: 0;
+  overflow: hidden;
 }
 
 * {
@@ -19,6 +20,7 @@ body {
 
 .App {
   height: 100%;
+  overflow: hidden;
 }
 
 .row {
